# py-cloud-agent-analyst

./: .dockerignore  .env-template  .env_template  .gitignore  README.md  create_backup.py  data_migrator.py  docker-compose.yml  main.py  pyproject.toml  rxconfig.py  schema.py  upload_stations.py
.github/workflows/: deploy-ui.yml
apps/backend/: pyproject.toml
apps/backend/core/: tools.py
apps/backend/engines/linear/: __init__.py  pipeline.py  prompts.py
apps/frontend/: Dockerfile  pyproject.toml  rxconfig.py
apps/frontend/querymind/components/: __init__.py
apps/frontend/querymind/components/atoms/: __init__.py  badge.py  heading.py  text.py
apps/frontend/querymind/components/molecules/: nav_item.py  prompt_area.py  terminal.py
apps/frontend/querymind/components/organisms/: __init__.py  navbar.py
apps/frontend/querymind/components/templates/: __init__.py
core/: config.py  logger.py  providers.py  tools.py
engines/: llm_provider.py
engines/agentic/: __init__.py
engines/linear/: main.py  pipeline.py  prompts.py
iac/environments/prod/: main.tofu  outputs.tofu  providers.tofu  variables.tofu
iac/modules/compute/: main.tofu  variables.tofu
iac/modules/iam/: main.tofu  outputs.tofu  variables.tofu
iac/modules/networking/: main.tofu  outputs.tofu  variables.tofu
iac/modules/security/: main.tofu  variables.tofu
iac/modules/services/: main.tofu  variables.tofu
querymind/: __init__.py  querymind.py  state.py  styles.py
querymind/components/atoms/: button.py  divider.py  textarea.py
querymind/components/molecules/: __init__.py
querymind/components/organisms/: sidebar.py
querymind/components/templates/: app_layout.py
scripts/: create_backup.py  data_migrator.py  push_ui.sh  upload_stations.py
strategies/: __init__.py  common.py
strategies/linear_chain/: __init__.py  runner.py
strategies/linear_chain/components/: __init__.py  bq_connector.py  data_interpreter.py  query_validator.py  sql_generator.py
strategies/linear_chain/prompts/: architect.yaml  interpreter.yaml  validator.yaml
strategies/linear_chain/schemas/: __init__.py  architect.py  logic.py
strategies/stateful_graph/: __init__.py  infrastructure.py  middleware.py  runner.py  state.py
strategies/stateful_graph/prompts/: agent_identity.yaml
strategies/stateful_graph/skills/: guadalajara_geo_resolver.yaml  registry.py  sql_query_expert.yaml
strategies/stateful_graph/tools/: bq_tools.py  introspection_tools.py  skills_tool.py
tests/: test_core_tools.py  test_linear.py  test_linear_pipeline.py
ui/: formatter.py  terminal.py
