[project]
name = "querymind"
version = "1.0.0"
description = "Observability Dashboard for Autonomous Agents on GCP"
readme = "README.md"
requires-python = "==3.13.11"
license = "MIT"
authors = [{ name = "Jose Munoz" }]

dependencies = [
    "reflex==0.8.26",
    "python-dotenv==1.2.1",
    "pydantic==2.12.5",
    "langgraph==1.0.8",
    "langchain-google-genai==4.2.0",
    "langchain-core==1.2.12",
    # "google-cloud-aiplatform==1.136.0",
    "google-cloud-bigquery==3.40.1",
    # "google-cloud-storage==3.9.0",
    # "google-cloud-firestore==2.23.0",
]

[project.optional-dependencies]
dev = ["ruff==0.15.0", "pylint==4.0.4", "pytest==8.4.2", "pytest-cov==7.0.0"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",  # Pyflakes & Error checks
    "I",  # Import sorting
    "B",  # Bugbear
    "S",  # Bandit (Security)
    "UP", # Pyupgrade
    "PL", # Pylint rules
]
ignore = [
    "E501", # Line length handled by formatter
    "D100", # Missing docstrings
]

[tool.ruff.lint.isort]
known-first-party = ["core", "engines"]
section-order = [
    "future",
    "standard-library",
    "google",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"google" = ["google", "langchain", "langgraph"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
minversion = "8.0"
# Logic moved from VS Code to here for CI/CD portability
addopts = "-ra -q --cov=agent --cov=dashboard --cov-report=term-missing --no-cov-on-fail"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.pylint.master]
ignored-modules = ["reflex", "firebase_admin"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "line-too-long",
    "missing-docstring",
    "unused-argument",
    "no-member",
    "not-callable",
    "inherit-non-class",
]

[tool.pylint.TYPECHECK]
generated-members = ["rx.*", "State.*", "var_*", "rx.config.*"]

[tool.setuptools]
packages = ["core", "engines"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.md"]

[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"
